--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "lint": "eslint . --fix",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage"
   }
 }
